2008-05-07  Roei Erez  <roeie@mainsoft.com>

	* Add ifdef TARGET_JVM

2008-05-03  Jb Evain  <jbevain@novell.com>

	* LambdaExpression.cs: move checks to Expression
	* Expression.cs: apply check for both typed and untyped lambda
	creation, so that the constructor does not throws exception.
	Needed to create instances of Expression<> for untyped lambda
	factory method. Fixes #386322.

2008-05-02  Jb Evain  <jbevain@novell.com>

	* Expression.cs: make Emit virtual instead of abstract,
	to allow externals libraries to extend Expression.
	Patch by Jan Oravec <jan.oravec@6com.sk>. Fixes #386097.

2008-04-29  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs (EmitPrimitiveConversion): implement.

2008-04-28  Jb Evain  <jbevain@novell.com>

	* EmitContext.cs: deal with globals when encountering them while
	compiling, and not ahead of time with a dedicated visitor.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* ConstantExpression.cs (Emit): emit properly null nullable types.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* Expression.cs: improve method finder.

2008-04-24  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs, EmitContext.cs: implement compilation
	of Quote as a global load.

2008-04-23  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs: start implementing EmitConvert.

2008-04-23  Jb Evain  <jbevain@novell.com>

	* ConstantExpression.cs (Emit): properly Emit null constants.

2008-04-23  Jb Evain  <jbevain@novell.com>

	* Expression.cs (Constant): check for assignability, not for type
	equality, when a type is passed.

2008-04-23  Jb Evain  <jbevain@novell.com>

	* ExpressionPrinter.cs: ToString convert properly.

2008-04-22  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs: implement IsLiftedToNull properly.
	* Expression.cs (Convert, ConvertChecked): implemented computing
	of IsLifted and IsLiftedToNull for conversions.

2008-04-22  Jb Evain  <jbevain@novell.com>

	* Expression.cs (Convert, ConvertChecked): implement.
